hphp/test/slow/array/ban_typehint2.php.expectf
Fatal error: Array typehints are no longer legal; use varray or darray instead in %s/ban_typehint2.php on line 4
